--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF9800</color>
-    <color name="colorPrimaryDark">#212121</color>
+    <color name="colorPrimary">#ffb81c</color>
+    <color name="colorPrimaryDark">#071b2c</color>
     <color name="colorAccent">#FAFAFA</color>
 </resources>
