Added Following UI to the Maintain Assignment Screen: • Added a Spinner containing modules to choose from (placeholder) • Added A Separation Line • Added Textviews for Date, Time and Title • Added RecyclerView that will be used to host the Assignment Fragments • Added Floating Action Button to be used for adding a New Assignment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#ffb81c</color>
     <color name="colorPrimaryDark">#071b2c</color>
-    <color name="colorAccent">#FAFAFA</color>
+    <color name="colorAccent">#fafafa</color>
 </resources>
