Commit #C13 - Carl Meyer
Added the Following Files:
• NewTestFragment (Class) & maintain_test_new_test (layout) - new Fragment for adding new Test

Changed the following File Names:
•changed fragment_new_assignment to maintain_assignment_new_assignment

Changed the following on all Layout Files:
• Changed the Screen Title Text Colour to NMU Dark Blue Colour so it  more noticeable an fits the NMU Theme

Changed the Following Layout Files:
 maintain test layout
• added Spinner to choose module
• added seperation line
• added Textviews indicating Date, Time and Venue
• added a RecyclerView that will host the Assignment Fragments
• Added FloatingActionButton (FAB) to make new Assignment.

   new test layout
 • added Textviews and Edit Text for Title, Date and Venue
 • added FAB for picking Date
 • added FAB for picking Time
 • added Button to finish create new assignment

 Added the following Functionality:
   maintain test fragment
 • When (FAB) pressed open NewAssignmentFragment

   new test fragment
 • when FAB Datepicker pressed create and show a Date Picker Dialog
 • when FAB TimePicker pressed create and show a Time Picker Dialog

--- a/app/src/main/res/layout/maintain_assignment_layout.xml
+++ b/app/src/main/res/layout/maintain_assignment_layout.xml
@@ -12,18 +12,20 @@
         android:layout_height="wrap_content"
         android:text="Maintain Assignment"
         android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="24sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="0dp" />
 
     <Spinner
-        android:id="@+id/spnModules"
+        android:id="@+id/spnModulesAssignment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginTop="15dp"
+        android:entries="@array/modules"
         android:paddingBottom="25dp"
         android:paddingTop="25dp"
         tools:layout_editor_absoluteX="8dp"
