--- a/app/src/main/res/layout/maintain_lecture_times_layout.xml
+++ b/app/src/main/res/layout/maintain_lecture_times_layout.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:text="Maintain Lecture Times"
         android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="24sp"
         android:textStyle="bold" />
 
@@ -63,7 +64,8 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true">
+            android:layout_alignParentTop="true"
+            android:layout_margin="15dp">
 
         </android.support.v7.widget.RecyclerView>
 
@@ -75,7 +77,6 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="16dp"
             android:clickable="true"
-            android:onClick="saveLectureTime"
             app:backgroundTint="@color/colorPrimary"
             app:elevation="5dp"
             app:fabSize="normal"
