Commit #C14 - Finished Upcoming Events
Changed the Following Layout Files:
 Upcoming Events:
• added Scroll View
• added Text views for headings and for Details
• added Recycler Views

Time Table:
• added a Scroll View

--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content"
         android:text="Home"
         android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="24sp"
         android:textStyle="bold" />
 </LinearLayout>
