Commit #C16 - Changed Colours
Changed the Following Layout Files:
 home layout:
• Changed Colour of Date Text View to Blue

time table layout
• Changed Colour of Days of Week to Blue

--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -35,7 +35,7 @@
                     android:layout_marginBottom="2dp"
                     android:text="Monday - 09 August 2017"
                     android:textAlignment="center"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -43,7 +43,7 @@
                     android:id="@+id/view"
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
-                    android:background="@color/colorPrimary" />
+                    android:background="@color/colorPrimaryDark" />
             </LinearLayout>
 
             <LinearLayout
