--- a/app/src/main/res/layout/timetable_layout.xml
+++ b/app/src/main/res/layout/timetable_layout.xml
@@ -99,7 +99,7 @@
                     android:layout_marginTop="2dp"
                     android:background="@android:color/darker_gray" />
 
-                <android.support.v7.widget.RecyclerView
+                <ListView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
@@ -182,7 +182,7 @@
                     android:layout_marginTop="2dp"
                     android:background="@android:color/darker_gray" />
 
-                <android.support.v7.widget.RecyclerView
+                <ListView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
@@ -265,7 +265,7 @@
                     android:layout_marginTop="2dp"
                     android:background="@android:color/darker_gray" />
 
-                <android.support.v7.widget.RecyclerView
+                <ListView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
@@ -348,7 +348,7 @@
                     android:layout_marginTop="2dp"
                     android:background="@android:color/darker_gray" />
 
-                <android.support.v7.widget.RecyclerView
+                <ListView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
@@ -432,7 +432,7 @@
                     android:layout_marginTop="2dp"
                     android:background="@android:color/darker_gray" />
 
-                <android.support.v7.widget.RecyclerView
+                <ListView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
