--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -103,7 +103,7 @@
 
                     </LinearLayout>
 
-                    <android.support.v7.widget.RecyclerView
+                    <ListView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
 
@@ -167,7 +167,7 @@
                             android:text="Title" />
                     </LinearLayout>
 
-                    <android.support.v7.widget.RecyclerView
+                    <ListView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
 
@@ -231,7 +231,7 @@
                             android:text="Venue" />
                     </LinearLayout>
 
-                    <android.support.v7.widget.RecyclerView
+                    <ListView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
 
