--- a/app/src/main/res/layout/maintain_test_layout.xml
+++ b/app/src/main/res/layout/maintain_test_layout.xml
@@ -66,7 +66,7 @@
             android:text="Venue" />
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_marginBottom="15dp"
