--- a/app/src/main/res/layout/upcoming_events_layout.xml
+++ b/app/src/main/res/layout/upcoming_events_layout.xml
@@ -81,7 +81,7 @@
                         android:text="Module" />
                 </LinearLayout>
 
-                <android.support.v7.widget.RecyclerView
+                <ListView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
             </LinearLayout>
@@ -143,7 +143,7 @@
                         android:text="Module" />
                 </LinearLayout>
 
-                <android.support.v7.widget.RecyclerView
+                <ListView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
             </LinearLayout>
