--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/txtTemp"
@@ -19,7 +20,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:orientation="vertical">
 
@@ -48,7 +49,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -104,8 +105,10 @@
                     </LinearLayout>
 
                     <ListView
+                        android:id="@+id/lvLectures"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:layout_height="wrap_content"
+                        android:dividerHeight="5dp" />
 
                 </LinearLayout>
 
@@ -168,6 +171,7 @@
                     </LinearLayout>
 
                     <ListView
+                        android:id="@+id/lvAssignments"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
 
@@ -232,6 +236,7 @@
                     </LinearLayout>
 
                     <ListView
+                        android:id="@+id/lvTests"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
 
