--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -14,6 +14,29 @@
         android:textSize="24sp"
         android:textStyle="bold" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView17"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
+            android:text="Monday - 21 August 2017"
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/colorPrimaryDark" />
+    </LinearLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -23,29 +46,6 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textView17"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="2dp"
-                    android:text="Monday - 09 August 2017"
-                    android:textAlignment="center"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-
-                <View
-                    android:id="@+id/view"
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:background="@color/colorPrimaryDark" />
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -83,23 +83,23 @@
 
                         <TextView
                             android:id="@+id/textView19"
-                            android:layout_width="wrap_content"
+                            android:layout_width="120dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
                             android:text="Lecture Time" />
 
                         <TextView
                             android:id="@+id/textView20"
-                            android:layout_width="wrap_content"
+                            android:layout_width="120dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Module" />
+
+                            android:text="Module"
+                            android:textAlignment="textStart" />
 
                         <TextView
                             android:id="@+id/textView21"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
+
                             android:text="Venue" />
 
                     </LinearLayout>
@@ -150,30 +150,28 @@
 
                         <TextView
                             android:id="@+id/textView24"
-                            android:layout_width="wrap_content"
+                            android:layout_width="120dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
                             android:text="Due Time" />
 
                         <TextView
                             android:id="@+id/textView25"
-                            android:layout_width="wrap_content"
+                            android:layout_width="120dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
                             android:text="Module" />
 
                         <TextView
                             android:id="@+id/textView26"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
                             android:text="Title" />
                     </LinearLayout>
 
                     <ListView
                         android:id="@+id/lvAssignments"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:layout_height="match_parent"
+                        android:dividerHeight="5dp" />
 
                 </LinearLayout>
 
@@ -215,30 +213,28 @@
 
                         <TextView
                             android:id="@+id/textView29"
-                            android:layout_width="wrap_content"
+                            android:layout_width="120dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
                             android:text="Test Time" />
 
                         <TextView
                             android:id="@+id/textView30"
-                            android:layout_width="wrap_content"
+                            android:layout_width="120dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
                             android:text="Module" />
 
                         <TextView
                             android:id="@+id/textView23"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
                             android:text="Venue" />
                     </LinearLayout>
 
                     <ListView
                         android:id="@+id/lvTests"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:layout_height="match_parent"
+                        android:dividerHeight="5dp" />
 
                 </LinearLayout>
 
