Commit #C23 - added 2 new Adapters and adapter layouts
• Realised the in the Upcoming Screen the Adapter layout wasn't right
• made 2 new Layout Adapters for Assignment and Test

--- a/app/src/main/res/layout/upcoming_events_layout.xml
+++ b/app/src/main/res/layout/upcoming_events_layout.xml
@@ -82,8 +82,10 @@
                 </LinearLayout>
 
                 <ListView
+                    android:id="@+id/ue_lvAssignments"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:dividerHeight="5dp" />
             </LinearLayout>
 
             <LinearLayout
@@ -144,8 +146,10 @@
                 </LinearLayout>
 
                 <ListView
+                    android:id="@+id/ue_lvTests"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:dividerHeight="5dp" />
             </LinearLayout>
 
 
