Commit #C23 - Adjusted Home Screen and Time Table Layout
•  Made new Adapters for Assignment and Test
• Copied and Adjusted Activity layout to make Assignment layout and Test Layout
• Adjusted the subtitle textviews to align with adapter views
• had to make Switch statements to adjust Utility set Height method to work for every amount of items in lists

--- a/app/src/main/res/layout/activity_layout_assignment.xml
+++ b/app/src/main/res/layout/activity_layout_assignment.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/linlayActivity"
+    android:id="@+id/als_linLay"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="15dp"
@@ -14,9 +14,8 @@
         android:id="@+id/als_tvDate"
         android:layout_width="60dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
         android:text="09 / 20"
-        android:textAlignment="viewStart"
+        android:textAlignment="center"
         android:textColor="@color/colorAccent"
         android:textSize="14sp"
         android:textStyle="bold" />
@@ -27,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:text="07:45"
-        android:textAlignment="viewStart"
+        android:textAlignment="center"
         android:textColor="@color/colorAccent"
         android:textSize="14sp"
         android:textStyle="bold" />
@@ -37,7 +36,7 @@
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:text="Assignment 5"
-        android:textAlignment="viewStart"
+        android:textAlignment="center"
         android:textColor="@color/colorAccent"
         android:textSize="14sp"
         android:textStyle="bold" />
@@ -47,7 +46,7 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="WRAP302"
-        android:textAlignment="viewStart"
+        android:textAlignment="center"
         android:textColor="@color/colorAccent"
         android:textSize="14sp"
         android:textStyle="bold" />
