--- a/app/src/main/res/layout/activity_layout_lecture.xml
+++ b/app/src/main/res/layout/activity_layout_lecture.xml
@@ -12,33 +12,33 @@
 
     <TextView
         android:id="@+id/tvActValue1"
-        android:layout_width="80dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
+        android:layout_weight="1"
         android:text="07:45"
-        android:textAlignment="viewStart"
+        android:textAlignment="center"
         android:textColor="@color/colorAccent"
         android:textSize="14sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvActValue2"
-        android:layout_width="120dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
+        android:layout_weight="1"
         android:text="MATH203"
-        android:textAlignment="viewStart"
+        android:textAlignment="center"
         android:textColor="@color/colorAccent"
         android:textSize="14sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvActValue3"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
+        android:layout_weight="1"
         android:text="35 00 17"
-        android:textAlignment="viewStart"
+        android:textAlignment="center"
         android:textColor="@color/colorAccent"
         android:textSize="14sp"
         android:textStyle="bold" />
