--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -83,24 +83,29 @@
 
                         <TextView
                             android:id="@+id/textView19"
-                            android:layout_width="120dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Lecture Time" />
+                            android:layout_weight="0.8"
+                            android:text="Time"
+                            android:textAlignment="center" />
 
                         <TextView
                             android:id="@+id/textView20"
-                            android:layout_width="120dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
 
+                            android:layout_weight="1"
                             android:text="Module"
-                            android:textAlignment="textStart" />
+                            android:textAlignment="center" />
 
                         <TextView
                             android:id="@+id/textView21"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
 
-                            android:text="Venue" />
+                            android:layout_weight="1"
+                            android:text="Venue"
+                            android:textAlignment="center" />
 
                     </LinearLayout>
 
@@ -150,21 +155,35 @@
 
                         <TextView
                             android:id="@+id/textView24"
-                            android:layout_width="120dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Due Time" />
+                            android:layout_weight="0.3"
+                            android:text="Date"
+                            android:textAlignment="center" />
 
                         <TextView
                             android:id="@+id/textView25"
-                            android:layout_width="120dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Module" />
+                            android:layout_weight="0.7"
+                            android:text="Time"
+                            android:textAlignment="center" />
 
                         <TextView
                             android:id="@+id/textView26"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Title" />
+                            android:layout_weight="1.2"
+                            android:text="Title"
+                            android:textAlignment="center" />
+
+                        <TextView
+                            android:id="@+id/textView28"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.8"
+                            android:text="Module"
+                            android:textAlignment="center" />
                     </LinearLayout>
 
                     <ListView
@@ -213,21 +232,35 @@
 
                         <TextView
                             android:id="@+id/textView29"
-                            android:layout_width="120dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Test Time" />
+                            android:layout_weight="0.3"
+                            android:text="Date"
+                            android:textAlignment="center" />
 
                         <TextView
                             android:id="@+id/textView30"
-                            android:layout_width="120dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Module" />
+                            android:layout_weight="0.7"
+                            android:text="Time"
+                            android:textAlignment="center" />
 
                         <TextView
-                            android:id="@+id/textView23"
-                            android:layout_width="match_parent"
+                            android:id="@+id/textView31"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Venue" />
+                            android:layout_weight="1.2"
+                            android:text="Venue"
+                            android:textAlignment="center" />
+
+                        <TextView
+                            android:id="@+id/textView32"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.8"
+                            android:text="Module"
+                            android:textAlignment="center" />
                     </LinearLayout>
 
                     <ListView
