--- a/app/src/main/res/layout/upcoming_events_layout.xml
+++ b/app/src/main/res/layout/upcoming_events_layout.xml
@@ -56,29 +56,33 @@
                         android:id="@+id/textView19"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Due Date" />
+                        android:layout_weight="0.6"
+                        android:text="Date"
+                        android:textAlignment="center" />
 
                     <TextView
                         android:id="@+id/textView20"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Due Time" />
+                        android:layout_weight="0.5"
+                        android:text="Time"
+                        android:textAlignment="center" />
 
                     <TextView
                         android:id="@+id/textView21"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Title" />
+                        android:layout_weight="1.2"
+                        android:text="Title"
+                        android:textAlignment="center" />
 
                     <TextView
                         android:id="@+id/textView23"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Module" />
+                        android:layout_weight="0.8"
+                        android:text="Module"
+                        android:textAlignment="center" />
                 </LinearLayout>
 
                 <ListView
@@ -120,29 +124,33 @@
                         android:id="@+id/textView24"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Test Date" />
+                        android:layout_weight="0.25"
+                        android:text="Date"
+                        android:textAlignment="center" />
 
                     <TextView
                         android:id="@+id/textView25"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Test Time" />
+                        android:layout_weight="0.25"
+                        android:text="Time"
+                        android:textAlignment="center" />
 
                     <TextView
                         android:id="@+id/textView26"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Venue" />
+                        android:layout_weight="1.2"
+                        android:text="Venue"
+                        android:textAlignment="center" />
 
                     <TextView
                         android:id="@+id/textView27"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Module" />
+                        android:layout_weight="0.8"
+                        android:text="Module"
+                        android:textAlignment="center" />
                 </LinearLayout>
 
                 <ListView
